--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <video id="bgVideo" autoplay muted loop src="background.mp4"></video>
-    <img id="gameOver" src="GameOver.jpg" alt="Game Over">
+    <!-- <img id="gameOver" src="GameOver.jpg" alt="Game Over"> -->
     <div class="main">
         <div class="title">Rapid Typing Game</div>
         <br>
@@ -69,32 +69,34 @@
                 </div>
             </div>
         </div>
-        <div class="reset-area">
-            <button class="reset-button"><i class="fas fa-redo"></i>  Reset</button>
-            <button class="exit-button"><i class="fas fa-sign-out-alt"></i>  Exit</button>
-        </div>
-        <br>
-        <div class="play-area">
-            <span>Difficulty: </span> <span id="playDifficulty"></span> 
-            <br>
-            <br>
-            <div class="time-score-div">
-                <div class="time-div">
-                    <i id="hourglass" class="fas fa-hourglass-start fa-spin"></i>
-                    <h3 id="time-left"></h3>         
-                </div>
-                <div class="empty-space">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </div>
-                <div class="score-div">
-                    <i id="score-star" class="fas fa-star fa-spin"></i>
-                    <h3 id="score"></h3>                    
-                </div>  
+        <div class="play-screen">
+            <div class="reset-area">
+                <button class="reset-button"><i class="fas fa-redo"></i>  Reset</button>
+                <button class="exit-button"><i class="fas fa-sign-out-alt"></i>  Exit</button>
             </div>
             <br>
-            <span>Type this word:</span>
-            <div class="word"></div>
-            <input type="text" name="user-input" id="user-input">
+            <div class="play-area">
+                <span>Difficulty: </span> <span id="playDifficulty"></span> 
+                <br>
+                <br>
+                <div class="time-score-div">
+                    <div class="time-div">
+                        <i id="hourglass" class="fas fa-hourglass-start fa-spin"></i>
+                        <h3 id="time-left"></h3>         
+                    </div>
+                    <div class="empty-space">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    </div>
+                    <div class="score-div">
+                        <i id="score-star" class="fas fa-star fa-spin"></i>
+                        <h3 id="score"></h3>                    
+                    </div>  
+                </div>
+                <br>
+                <span>Type this word:</span>
+                <div class="word"></div>
+                <input type="text" name="user-input" id="user-input">
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
