fix: Moved image and video to public folderand changed the path in html and css files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/452e65c997.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <video id="bgVideo" autoplay muted loop src="background.mp4"></video>
+    <video id="bgVideo" autoplay muted loop src="./public/background.mp4"></video>
     <!-- <img id="gameOver" src="GameOver.jpg" alt="Game Over"> -->
     <div class="main">
         <div class="title">Rapid Typing Game</div>
