made a src folder for html,css and script file

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rapid Typing Game</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
-    <link rel="manifest" href="public/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/RapidTyperGame/public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/RapidTyperGame/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/RapidTyperGame/public/favicon-16x16.png">
+    <link rel="manifest" href="/RapidTyperGame/public/site.webmanifest">
     <script src="https://kit.fontawesome.com/452e65c997.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <video id="bgVideo" autoplay muted loop src="./public/background.mp4"></video>
+    <video id="bgVideo" autoplay muted loop src="/RapidTyperGame/public/background.mp4"></video>
     <!-- <img id="gameOver" src="GameOver.jpg" alt="Game Over"> -->
     <div class="main">
         <div class="title">Rapid Typing Game</div>
