Updated the background image

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://kit.fontawesome.com/452e65c997.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <video id="bgVideo" autoplay muted loop src="./public/background.mp4"></video>
-    <!-- <img id="gameOver" src="GameOver.jpg" alt="Game Over"> -->
+    <!--<video id="bgVideo" autoplay muted loop src="./public/background.mp4"></video> -->
+    <img id="bgVideo" src="RapidTyperBg.jpg" alt="Background Image">
     <div class="main">
         <div class="title">Rapid Typing Game</div>
         <br>
