--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!--<video id="bgVideo" autoplay muted loop src="./public/background.mp4"></video> -->
-    <img id="bgVideo" src="./public/RapidTyperBg.jpg" alt="Background Image">
+<!--     <img id="bgVideo" src="./public/RapidTyperBg.jpg" alt="Background Image"> -->
     <div class="main">
         <div class="title">Rapid Typing Game</div>
         <br>
